fixed spacing between blocks in the viewer

--- a/src/pages/Viewer.module.css
+++ b/src/pages/Viewer.module.css
@@ -111,3 +111,12 @@
     width: 100%;
   }
 }
+
+/* correct the spacing between blocks */
+.app .items .type_p,
+.app .items p {
+  margin: 0;
+}
+.app .items > div {
+  margin-top: var(--basis);
+}
